fx done no. 5 - A

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -435,6 +435,9 @@
                                                                 </span>
                                                               </button>
                                                             </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Replace" theme="[object Object]"><div class="_q40c6s">Replace</div></button>
+                                                             </div>
                                                           </div>
                                                         </div>
                                                       </div>
@@ -1863,7 +1866,7 @@
                                                       <div>
                                                         <div class="become-a-host__photos-more-wrapper">
                                                           <button aria-label="Photo options" type="button"
-                                                            class="btn-nav">
+                                                            class="btn-nav btn-dots">
                                                             <span class="box-border">
                                                               <svg viewBox="0 0 16 16"
                                                                 xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -1883,6 +1886,9 @@
                                                               </svg>
                                                             </span>
                                                           </button>
+                                                        </div>
+                                                        <div class="_olsjb9v hidden" tabindex="-1">
+                                                          <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Replace</div></button>
                                                         </div>
                                                       </div>
                                                     </div>
@@ -2016,7 +2022,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2038,6 +2044,10 @@
                                                                 </span>
                                                               </button>
                                                             </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                             </div>
                                                           </div>
                                                         </div>
                                                       </div>
@@ -2131,7 +2141,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2152,6 +2162,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
@@ -2246,7 +2260,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2268,6 +2282,10 @@
                                                                 </span>
                                                               </button>
                                                             </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                             </div>
                                                           </div>
                                                         </div>
                                                       </div>
@@ -2361,7 +2379,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2382,6 +2400,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
@@ -2476,7 +2498,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2497,6 +2519,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
@@ -2591,7 +2617,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2612,6 +2638,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
@@ -2706,7 +2736,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2727,6 +2757,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
@@ -2821,7 +2855,7 @@
                                                           <div>
                                                             <div class="become-a-host__photos-more-wrapper">
                                                               <button aria-label="Photo options" type="button"
-                                                                class="btn-nav">
+                                                                class="btn-nav btn-dots">
                                                                 <span class="box-border">
                                                                   <svg viewBox="0 0 16 16"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -2842,6 +2876,10 @@
                                                                   </svg>
                                                                 </span>
                                                               </button>
+                                                            </div>
+                                                            <div class="_olsjb9v hidden" tabindex="-1">
+                                                              <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                              <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
                                                             </div>
                                                           </div>
                                                         </div>
