fx done no. 5 - B

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -596,6 +596,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -700,6 +704,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -804,6 +812,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -908,6 +920,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -1012,6 +1028,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -1116,6 +1136,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -1220,6 +1244,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -1324,6 +1352,10 @@
                                                                     </span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v hidden" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" data-testid="photo-option-Remove" theme="[object Object]"><div class="_q40c6s">Remove</div></button>
+                                                                 </div>
                                                               </div>
                                                             </div>
                                                           </div>
@@ -3339,6 +3371,150 @@
   <div dir="ltr">
     <div class="_56lpy0"></div>
   </div>
+
+  <div dir="ltr">
+    <div class="_1t0jy5tw hidden"></div>
+    <section>
+     <div class="_vxvq8x hidden" data-testid="modal-container">
+      <div class="_z4lmgp">
+       <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+       <div class="_z4lmgp">
+        <div role="dialog" aria-label="Photo edit modal" aria-modal="true" class="modal-caption _1nvgts7s" style="position: relative;">
+         <div class="_pa35zs">
+          <button aria-label="Close" type="button" class="_oda838" id="close-modal-caption">
+           <span class="_e296pg">
+            <svg
+             viewBox="0 0 32 32"
+             xmlns="http://www.w3.org/2000/svg"
+             aria-hidden="true"
+             role="presentation"
+             focusable="false"
+             style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+            >
+             <path d="m6 6 20 20"></path>
+             <path d="m26 6-20 20"></path>
+            </svg>
+           </span>
+          </button>
+         </div>
+         <header class="_1youxq0">
+          <div class="_1tng6ym"></div>
+          <div class="_9t7ktw">
+           <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Edit photo</div></h1>
+          </div>
+          <div class="_rrmdgl"></div>
+         </header>
+         <div class="_12kfhdn">
+          <div class="_1w4ek5c">
+           <div class="_meb44z">
+            <div class="_8hh3ld">
+             <div class="_1e7tnaz">
+              <div class="_93wa38" role="group" aria-label="Adjust photo crop area">
+               <canvas id="edited-photo" class="_1dneyga" width="1052" height="789"></canvas><canvas id="edited-photo-grid" class="_bm1d2nm" width="1052" height="789"></canvas>
+               <div class="_hmmjev9">
+                <button aria-label="Move photo position up" type="button" class="_182mjq01">
+                 <span class="_3hmsj">
+                  <svg
+                   viewBox="0 0 32 32"
+                   xmlns="http://www.w3.org/2000/svg"
+                   aria-hidden="true"
+                   role="presentation"
+                   focusable="false"
+                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+                  >
+                   <g fill="none"><path d="m4 20 11.2928932-11.29289322c.3905243-.39052429 1.0236893-.39052429 1.4142136 0l11.2928932 11.29289322"></path></g>
+                  </svg>
+                 </span>
+                </button>
+               </div>
+               <div class="_1mwr8eb9">
+                <button aria-label="Move photo position left" type="button" class="_182mjq01">
+                 <span class="_3hmsj">
+                  <svg
+                   viewBox="0 0 32 32"
+                   xmlns="http://www.w3.org/2000/svg"
+                   aria-hidden="true"
+                   role="presentation"
+                   focusable="false"
+                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+                  >
+                   <g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g>
+                  </svg>
+                 </span>
+                </button>
+               </div>
+               <div class="_2qv72pc">
+                <button aria-label="Move photo position down" type="button" class="_182mjq01">
+                 <span class="_3hmsj">
+                  <svg
+                   viewBox="0 0 32 32"
+                   xmlns="http://www.w3.org/2000/svg"
+                   aria-hidden="true"
+                   role="presentation"
+                   focusable="false"
+                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+                  >
+                   <g fill="none"><path d="m28 12-11.2928932 11.2928932c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-11.2928932-11.2928932"></path></g>
+                  </svg>
+                 </span>
+                </button>
+               </div>
+               <div class="_osv4jca">
+                <button aria-label="Move photo position right" type="button" class="_182mjq01">
+                 <span class="_3hmsj">
+                  <svg
+                   viewBox="0 0 32 32"
+                   xmlns="http://www.w3.org/2000/svg"
+                   aria-hidden="true"
+                   role="presentation"
+                   focusable="false"
+                   style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+                  >
+                   <g fill="none"><path d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"></path></g>
+                  </svg>
+                 </span>
+                </button>
+               </div>
+              </div>
+             </div>
+            </div>
+            <div class="_1g2tcap">
+             <div class="_g6eb3r">
+              <div class="_1l8asbu">
+               <div class="_13wkz77">
+                <label for="captionTextArea">
+                 <div class="_1wgf3yo">Caption</div>
+                 <div class="_4l12l8">
+                  <div class="_1aoj0ap">
+                   <div dir="ltr"><textarea maxlength="250" name="captionTextArea" rows="6" class="_159914b" autocomplete="off" id="captionTextArea"></textarea></div>
+                  </div>
+                 </div>
+                </label>
+               </div>
+               <div class="_4ce89o"><span class="a8jt5op dir dir-ltr" aria-live="assertive"></span></div>
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </div>
+         <footer class="_zgc1p6">
+          <div class="_1t0j0qc">
+           <div></div>
+           <div class="_jro6t0"><button disabled="" type="submit" class="_1ku51f04">Save</button></div>
+          </div>
+         </footer>
+        </div>
+       </div>
+       <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+      </div>
+     </div>
+    </section>
+    <div class="_b21f4g">
+     <div aria-live="polite" aria-atomic="true"></div>
+     <div aria-live="assertive" aria-atomic="true"></div>
+    </div>
+   </div>
 
   <script src="../assets/js/pages/photos.js"></script>
   <script src="../assets/js/pages/manage-listing.js"></script>
