--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -30441,6 +30441,28 @@
                     </div>
                   </section>
                 </div>
+                <div class="_8c85wg hidden">
+                  <div class="">
+                    <div role="group" class="_16ft90e">
+                      <div class="_prpxj8">
+                        <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Success" role="img" focusable="false"
+                          style="
+                                            display: block;
+                                            height: 16px;
+                                            width: 16px;
+                                            fill: currentcolor;
+                                          ">
+                          <path
+                            d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm3.159 4.869L6.67 9.355 4.42 7.105 3.289 8.236 6.67 11.62 12.291 6z">
+                          </path>
+                        </svg>
+                      </div>
+                      <div class="_ui1luc">
+                        <div tabindex="0" class="_1n6q029">Link Copied</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div
@@ -30582,6 +30604,21 @@
                         <button type="button" class="_1ku51f04">
                           Copy HTML
                         </button>
+                        <div class="_ei7ywt hidden">
+                          <div class="_7h9abkc">
+                            <div role="group" class="_16ft90e">
+                              <div class="_prpxj8"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Success" role="img"
+                                  focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                  <path
+                                    d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm3.159 4.869L6.67 9.355 4.42 7.105 3.289 8.236 6.67 11.62 12.291 6z">
+                                  </path>
+                                </svg></div>
+                              <div class="_ui1luc">
+                                <div tabindex="0" class="_1n6q029">Copied!</div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                       <div class="_1hfu0v">
                         <div>
