Add calendar modal mobile (check availability)

--- a/edit/what.html
+++ b/edit/what.html
@@ -1692,7 +1692,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
              <div style="--gp-section-max-width: 1120px;">
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FORM" data-section-id="CONCEPT_REFINEMENT_0_FORM">
                <div class="c14z17by dir dir-ltr">
-                <div class="c1yo0219 dir dir-ltr">
+                <div class="flex-before-after dir dir-ltr">
                  <div style="--gp-section-max-width: 1120px;">
                   <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_MODAL" data-section-id="CONCEPT_REFINEMENT_0_MODAL">
                    <div class="_186jfb2">
@@ -3951,7 +3951,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
               <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FOOTER" data-section-id="CONCEPT_REFINEMENT_0_FOOTER" style="padding-top: 16px; padding-bottom: 16px;">
                <div class="c1sjhfzr t1pii32p dir dir-ltr">
-                <div class="c1yo0219 dir dir-ltr">
+                <div class="flex-before-after dir dir-ltr">
                  <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" data-section-id="CONCEPT_REFINEMENT_0_NEXT_BUTTON" style="display: contents;"><button type="button" class="_1ku51f04">Next</button></div>
                 </div>
                </div>
