--- a/submission/basics-error.html
+++ b/submission/basics-error.html
@@ -800,7 +800,7 @@
                                         aria-describedby="partner-switch-row-subtitle"
                                         role="switch"
                                         type="button"
-                                        class="_17z7clia"
+                                        class="switch-toogle-inactive"
                                       >
                                         <div class="form__switch-toggle"></div>
                                       </button>
